--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ pytest = "^5.4.1"
 requests = "^2.23.0"
 
 [tool.poetry.dev-dependencies]
+coverage = "^5.1"
 
 [build-system]
 requires = ["poetry>=0.12"]
